--- a/OpenEdXMobile/res/values-ar/strings.xml
+++ b/OpenEdXMobile/res/values-ar/strings.xml
@@ -5,6 +5,8 @@
   <string name="course_details_congratulations">تهانينا!</string>
   <!--Message for user who has successfully completed a certificate course-->
   <string name="course_details_earned_cert">لقد اجتزت المساق.</string>
+  <!--Button that opens a full view of an earned certificate-->
+  <string name="course_details_view_cert_button">عرض الشهادة</string>
   <!--Course Discovery-->
   <!--Enroll Now button text-->
   <string name="enroll_now_button_text">سجّل الآن</string>
@@ -26,6 +28,8 @@
   <!--Error message shown when browser cannot handle request for given web url-->
   <string name="cannot_open_url">يتعذّر فتح صفحة الويب.</string>
   <!--Course Sharing-->
+  <!--Description of button that will open the share course menu-->
+  <string name="share_course_button">مشاركة المُساق</string>
   <!--Share course-->
   <string name="share_course_message">أحضر حاليًا مساقًا ممتعًا على منصّة {platform_name}! اطلع عليه:</string>
   <!--Certificate Page-->
@@ -39,14 +43,22 @@
   <!--Alert dialog error message shown when using a feature with a required Internet connection-->
   <string name="need_data">هذه الميزة تتطلب منك أن تكون متصلًا بشبكة الإنترنت.</string>
   <!--Login Activity Place Holders-->
+  <!--Hint text for login field-->
+  <string name="email_username">اسم المستخدم أو البريد الإلكتروني</string>
   <!--Hint text for email address field in reset password dialog-->
   <string name="email">البريد الإلكتروني</string>
   <!--Hint text for password field-->
   <string name="password">كلمة السر</string>
+  <!--Button text allowing user to reset their password-->
+  <string name="forgot_password">هل نسيت كلمة السر؟</string>
+  <!--Button initiating login process after user enters credentials like username and password-->
+  <string name="login">تسجيل الدخول</string>
   <!--Accessible content description of sign in button on Log in screen-->
   <string name="login_btn">زر تسجيل الدخول</string>
   <!--Message shown while waiting for action-->
   <string name="progress_text">انتظر من فضلك</string>
+  <!--Message shown while user waits for response to a sign in request-->
+  <string name="signing_in">جار تسجيل الدخول</string>
   <!--Message for shown after tapping Sign In-->
   <string name="error_message">حدث خطأ</string>
   <!--Generic error during log in-->
@@ -64,15 +76,22 @@
   <string name="tos_and_honor_code">شروط الخدمة وميثاق الشرف الأكاديمي الخاصين بمنصّة {platform_name} </string>
   <!--Label for Privacy Policy-->
   <string name="privacy_policy">سياسة الخصوصية</string>
+  <string name="login_title">تسجيل الدخول</string>
   <!--Accessible content description of close button on Sign in and Sign up screen-->
   <string name="close">إغلاق</string>
   <!--Accessible content description prefix of dropdowns on Sign up screen, like, country and gender dropdowns-->
   <string name="dropdown_list_prefix">قائمة منسدلة</string>
   <!--Navigation Drawer Labels-->
+  <!--Button text to show user current downloads screen-->
+  <string name="label_current_downloads">عرض التحميلات الحاليّة</string>
+  <!--Title of user's course list screen-->
+  <string name="label_my_courses">المساقات</string>
   <!--Title of user's program list screen-->
   <string name="label_programs">البرامج</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">استكشف المساقات</string>
+  <!--Title of Find Courses tab on Main Dashboard screen-->
+  <string name="label_discovery">استكشاف الدورات التدريبية</string>
   <!--Button allowing users to send an email for feedback-->
   <string name="label_submit_feedback">أرسل ملاحظاتك</string>
   <!--Toggle switch on state label-->
@@ -132,6 +151,20 @@
   <string name="course_name">اسم المساق</string>
   <!--Label indicating new course content has been downloaded-->
   <string name="new_course_content">محتويات المساق الجديد</string>
+  <!--Label for date when course starts-->
+  <string name="label_starting">يبدأ في {date}</string>
+  <!--Label for course that has ended-->
+  <string name="label_ended">انتهى في {date}</string>
+  <!--Label for date when course is ending-->
+  <string name="label_ending">ينتهي في {date}</string>
+  <!--Label for date when course is expiring in a specific time frame like in 2 days-->
+  <string name="label_expires">ستنتهي صلاحية الوصول إلى الدورة التدريبية {date}</string>
+  <!--Label for date when course is expiring on a specific date like on December 5-->
+  <string name="label_expires_on">ستنتهي صلاحية الوصول إلى الدورة التدريبية في {date}</string>
+  <!--Label for date when course expired a specific time ago like 2 days ago-->
+  <string name="label_expired">انتهت صلاحية الوصول إلى الدورة التدريبية {date}</string>
+  <!--Label for date when course expired on a specific date like on November 5-->
+  <string name="label_expired_on">انتهت صلاحية الوصول إلى الدورة التدريبية في {date}</string>
   <!--Course Details-->
   <!--Accessible content description of label for course content-->
   <string name="course_content">محتوى المساق</string>
@@ -161,6 +194,8 @@
   <string name="upgrade_to_verified_today_title">الترقية إلى مسار معتمَد الآن</string>
   <!--Title of place order for course upgrade screen-->
   <string name="place_order_title">إرسال طلب</string>
+  <!--label for resume course section. Will be followed by course name-->
+  <string name="label_resume">سيرة ذاتية</string>
   <!--Mobile Payments-->
   <string name="payments_info_header">تعقب موثوقية الشهادة</string>
   <string name="payments_info_details">إبراز معرفتك ومهاراتك الجديدة من خلال شهادة موثقة استخدم بيانات الاعتماد القيّمة هذه لتحسين فرص وظيفتك وتعزيز حياتك المهنية ، أو إبراز شهادتك في تطبيقات المدرسة.</string>
@@ -428,6 +463,10 @@
   <string name="video_player_forward_time_sec">+15</string>
   <!--Button label to bring up course finder-->
   <string name="find_course_text">هل تبحثُ عن تحدٍ جديد؟</string>
+  <!--Button label to bring up course finder-->
+  <string name="find_course_btn_text">ابحث عن مساق</string>
+  <!--Message between sign in button and social login buttons-->
+  <string name="or_sign_in_with">أو سجل الدخول باستخدم</string>
   <!--Facebook login method-->
   <string name="facebook_text">فيسبوك</string>
   <!--Google login method-->
@@ -443,6 +482,9 @@
   <string name="already_have_an_account">قمت بإنشاءِ حسابٍ مسبقاً؟ سجل الدخول</string>
   <!--Prompt leading user to create account screen-->
   <string name="sign_up_and_learn">أنشئ حساباً جديداً وابدأ التعلم</string>
+  <!--In Register screen-->
+  <string name="register_with">تسجيل الاشتراك باستخدام</string>
+  <string name="or_register_with_email">أو سجّل اشتراكك باستخدام البريد الإلكتروني</string>
   <!--New Logistration Launch screen text-->
   <!--Button leading user to create account screen-->
   <string name="launch_register">تسجيل</string>
@@ -459,8 +501,14 @@
   <!--Label Explore all courses on the launch screen-->
   <string name="label_explore_all_courses"><u>اكتشف كل الدورات</u></string>
   <!--Registration Screen-->
+  <!--Button text allowing user to show hidden optional registration fields-->
+  <string name="show_optional_text">أظهر الحقول الاختيارية</string>
   <!--Button text allowing user to hide visible optional registration fields-->
   <string name="hide_optional_text">أخفي الحقول الاختيارية</string>
+  <!--Button text allowing user create an account-->
+  <string name="create_account_text">أنشئ حسابي الجديد</string>
+  <!--Accessible content description of create account button on Registration screen-->
+  <string name="create_account_btn">زر أنشئ حسابي</string>
   <!--Text shown while waiting for registration request-->
   <string name="creating_account_text">جاري إنشاء الحساب...</string>
   <!--Registration screen title-->
