--- a/OpenEdXMobile/res/values-tr/strings.xml
+++ b/OpenEdXMobile/res/values-tr/strings.xml
@@ -5,6 +5,8 @@
   <string name="course_details_congratulations">Tebrikler!</string>
   <!--Message for user who has successfully completed a certificate course-->
   <string name="course_details_earned_cert">Dersten geçtiniz.</string>
+  <!--Button that opens a full view of an earned certificate-->
+  <string name="course_details_view_cert_button">Sertifikayı Gör</string>
   <!--Course Discovery-->
   <!--Enroll Now button text-->
   <string name="enroll_now_button_text">Şimdi kayıt yaptır</string>
@@ -26,6 +28,8 @@
   <!--Error message shown when browser cannot handle request for given web url-->
   <string name="cannot_open_url">Web sayfası gösterilemiyor.</string>
   <!--Course Sharing-->
+  <!--Description of button that will open the share course menu-->
+  <string name="share_course_button">Dersinizi paylaşın</string>
   <!--Share course-->
   <string name="share_course_message">{platform_name} üzerinde ders alıyorum! Buna bir bak:</string>
   <!--Certificate Page-->
@@ -39,14 +43,22 @@
   <!--Alert dialog error message shown when using a feature with a required Internet connection-->
   <string name="need_data">Bu özellik aktif bir internet bağlantısı gerektiriyor.</string>
   <!--Login Activity Place Holders-->
+  <!--Hint text for login field-->
+  <string name="email_username">Kullanıcı adı veya e-posta adresi</string>
   <!--Hint text for email address field in reset password dialog-->
   <string name="email">E-posta adresi</string>
   <!--Hint text for password field-->
   <string name="password">Parola</string>
+  <!--Button text allowing user to reset their password-->
+  <string name="forgot_password">Parolanızı mı unuttunuz?</string>
+  <!--Button initiating login process after user enters credentials like username and password-->
+  <string name="login">Giriş</string>
   <!--Accessible content description of sign in button on Log in screen-->
   <string name="login_btn">Giriş düğmesi</string>
   <!--Message shown while waiting for action-->
   <string name="progress_text">Lütfen bekleyin</string>
+  <!--Message shown while user waits for response to a sign in request-->
+  <string name="signing_in">Giriş yapılıyor</string>
   <!--Message for shown after tapping Sign In-->
   <string name="error_message">Hata Mesajı</string>
   <!--Generic error during log in-->
@@ -64,17 +76,22 @@
   <string name="tos_and_honor_code">{platform_name} Hizmet Şartları ve Etik Kuralları</string>
   <!--Label for Privacy Policy-->
   <string name="privacy_policy">Gizlilik Politikası</string>
+  <string name="login_title">Giriş</string>
   <!--Accessible content description of close button on Sign in and Sign up screen-->
   <string name="close">Kapat</string>
   <!--Accessible content description prefix of dropdowns on Sign up screen, like, country and gender dropdowns-->
   <string name="dropdown_list_prefix">Açılır liste.</string>
   <!--Navigation Drawer Labels-->
+  <!--Button text to show user current downloads screen-->
+  <string name="label_current_downloads">Şu anki indirmeleri görüntüle</string>
   <!--Title of user's course list screen-->
   <string name="label_my_courses">Dersler</string>
   <!--Title of user's program list screen-->
   <string name="label_programs">Programlar</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">Dersleri Bul</string>
+  <!--Title of Find Courses tab on Main Dashboard screen-->
+  <string name="label_discovery">Keşfet</string>
   <!--Button allowing users to send an email for feedback-->
   <string name="label_submit_feedback">Geribildirim gönder</string>
   <!--Toggle switch on state label-->
@@ -135,6 +152,20 @@
   <string name="course_name">Ders Adı</string>
   <!--Label indicating new course content has been downloaded-->
   <string name="new_course_content">Yeni Ders İçeriği</string>
+  <!--Label for date when course starts-->
+  <string name="label_starting">Başlangıç {date}</string>
+  <!--Label for course that has ended-->
+  <string name="label_ended">Bitti {date}</string>
+  <!--Label for date when course is ending-->
+  <string name="label_ending">Bitiyor {date}</string>
+  <!--Label for date when course is expiring in a specific time frame like in 2 days-->
+  <string name="label_expires">Derse erişim {date} tarihinde sona eriyor</string>
+  <!--Label for date when course is expiring on a specific date like on December 5-->
+  <string name="label_expires_on">Derse erişim {date} tarihinde sona eriyor</string>
+  <!--Label for date when course expired a specific time ago like 2 days ago-->
+  <string name="label_expired">Derse erişim {date} tarihinde sona erdi</string>
+  <!--Label for date when course expired on a specific date like on November 5-->
+  <string name="label_expired_on">Derse erişim {date} tarihinde sona erdi</string>
   <!--Course Details-->
   <!--Accessible content description of label for course content-->
   <string name="course_content">Ders İçeriği</string>
@@ -164,6 +195,8 @@
   <string name="upgrade_to_verified_today_title">Bugün Onaylı\'ya Yükseltin</string>
   <!--Title of place order for course upgrade screen-->
   <string name="place_order_title">Sipariş Ver</string>
+  <!--label for resume course section. Will be followed by course name-->
+  <string name="label_resume">Devam et</string>
   <!--Mobile Payments-->
   <string name="payments_info_header">Onaylanmış Bir Sertifika Edinin!</string>
   <string name="payments_info_details">Doğrulanmış bir sertifika ile yeni bilgi ve becerilerinizi vurgulayın. \n\nİş fırsatlarınızı geliştirmek ve kariyerinizi geliştirmek için bu değerli sertifikayı kullanın veya okul başvurularınızda sertifikanızı vurgulayın.</string>
@@ -415,6 +448,10 @@
   <string name="video_player_forward_time_sec">+15</string>
   <!--Button label to bring up course finder-->
   <string name="find_course_text">Yeni bir maceraya hazır mısın?</string>
+  <!--Button label to bring up course finder-->
+  <string name="find_course_btn_text">Bir Ders Bul</string>
+  <!--Message between sign in button and social login buttons-->
+  <string name="or_sign_in_with">Ya da şununla giriş yap </string>
   <!--Facebook login method-->
   <string name="facebook_text">Facebook</string>
   <!--Google login method-->
@@ -430,6 +467,9 @@
   <string name="already_have_an_account">Hesabın var mı? Giriş yap</string>
   <!--Prompt leading user to create account screen-->
   <string name="sign_up_and_learn">Üye ol ve öğrenmeye başla</string>
+  <!--In Register screen-->
+  <string name="register_with">Şununla kaydol </string>
+  <string name="or_register_with_email">ya da e-posta ile kayıt ol</string>
   <!--New Logistration Launch screen text-->
   <!--Button leading user to create account screen-->
   <string name="launch_register">Kayıt ol</string>
@@ -446,8 +486,14 @@
   <!--Label Explore all courses on the launch screen-->
   <string name="label_explore_all_courses"><u>Tüm dersleri keşfedin</u></string>
   <!--Registration Screen-->
+  <!--Button text allowing user to show hidden optional registration fields-->
+  <string name="show_optional_text">Seçimlik alanları göster</string>
   <!--Button text allowing user to hide visible optional registration fields-->
   <string name="hide_optional_text">Seçimlik alanları gizle</string>
+  <!--Button text allowing user create an account-->
+  <string name="create_account_text">Hesabımı oluştur</string>
+  <!--Accessible content description of create account button on Registration screen-->
+  <string name="create_account_btn">Hesabımı oluştur düğmesi</string>
   <!--Text shown while waiting for registration request-->
   <string name="creating_account_text">Hesap oluşturuluyor...</string>
   <!--Registration screen title-->
